# python-ibmdb

./: .appveyor.yml  .gitattributes  .gitignore  .project  .travis.yml  APIs.md  ASYNC_APIs_WIKI.md  CHANGES.md  Contributions.md  INSTALL.md  LICENSE  MANIFEST.in  NOTES.md  ProjectHome.md  README.md  _ibm_db_register_dll.py  config.json  config.py  config.py.sample  ibm_db.c  ibm_db.h  ibm_db.py  ibm_db32_py27.pyd  ibm_db32_py310.pyd  ibm_db32_py311.pyd  ibm_db32_py34.pyd  ibm_db32_py35.pyd  ibm_db32_py36.pyd  ibm_db32_py37.pyd  ibm_db32_py38.pyd  ibm_db32_py39.pyd  ibm_db64_py27.pyd  ibm_db64_py310.pyd  ibm_db64_py311.pyd  ibm_db64_py34.pyd  ibm_db64_py35.pyd  ibm_db64_py36.pyd  ibm_db64_py37.pyd  ibm_db64_py38.pyd  ibm_db64_py39.pyd  (+14 more)
CLA_DOCS/: IBM_DB_Python Joint Copyright Assignment - onetime.doc  IBM_DB_Python Joint Copyright Assignment - ongoing.doc  IBM_DB_Python Joint Copyright Assignment Addendum - ongoing.doc
IBM_DB/: .project
asyncio_testsuite/: test_01_async_connect.py  test_02_async_pconnect.py  test_03_async_connection_class.py  test_04_async_context_manager.py  test_05_async_fetch.py  test_06_async_iteration.py  test_07_async_execute_params.py  test_08_async_prepare_bind_execute.py  test_09_async_callproc.py  test_10_async_bind_array_callproc.py  test_11_async_executemany.py  test_12_async_commit_rollback.py  test_13_async_autocommit.py  test_14_async_set_get_option.py  test_15_async_schema.py  test_16_async_server_info.py  test_17_async_metadata.py  test_18_async_fix_return_type.py  test_19_async_dml.py  test_20_async_nextset.py  (+17 more)
certs/: ibm_certs.pem
(+644 files in other folders)
